Cleanup after merge: put mutationVector plot back in, replace short dataset labels,  fixed vertical alignment issue

--- a/css/columnUi.css
+++ b/css/columnUi.css
@@ -1,8 +1,9 @@
 .columnUi {
 	font-size: 0.8em;
-	vertical-align: bottom;
+	vertical-align: top;
 }
 .columnUi tr {
+	vertical-align: top;
 	white-space: nowrap;
 }
 .columnUi input {
@@ -27,7 +28,7 @@
 	margin-top: 4px;
 	margin-bottom: 4px;
 	display: inline-block;
-	cursor: move;
+	cursor: ew-resize;
 }
 .columnUi .more {
 	margin-bottom: 2px;
